[package]
name = "rt-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rt_rust"
crate-type = ["rlib", "staticlib"]

[dependencies]

[features]
default = []
smp = []
example_hello = []
example_memory = []
example_printf = []
example_thread = []
example_mutex = []
example_sem = []
example_mq = []
example_dl = []
bench_test = []


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"