[workspace]
members = [
    ".", 
    "rt_macros",
    "examples/application/fs",
    "examples/application/loadlib",
    "examples/application/mutex",
    "examples/application/param",
    "examples/application/queue",
    "examples/application/semaphore",
    "examples/application/thread",
    "examples/component/component_registry",
    "examples/component/log",
]
exclude = [
    "examples/modules/example_lib",
]

[package]
name = "rt-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rt_rust"
crate-type = ["rlib", "staticlib"]

[dependencies]
rt_macros = { path = "rt_macros" }

[features]
default = []
smp = []
