[package]
name = "rt_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.13.2"
cfg-if = "1.0.0"
lazy_static = "1.4.0"

[features]
default = [ "rtt",]
rtt = [ "lazy_static/spin_no_std", "cstr_core", "cty",]
smp = []
host_test = []

[dependencies.cstr_core]
version = "0.2.4"
optional = true

[dependencies.cty]
version = "0.2.2"
optional = true
